implemnetando classe usuários

--- a/web/hp/chamados/chamadosfinalizados.xhtml
+++ b/web/hp/chamados/chamadosfinalizados.xhtml
@@ -25,7 +25,7 @@
             <h:commandButton value="Voltar" action="#{usuarioBean.voltar()}" />
             <h:commandButton value="Novo Chamado" action="#{usuarioBean.irVerificarINEP()}" />
             
-            <h:dataTable var="chamdo" value="#{usuarioBean.listarTodosChamados()}" width="100%" rendered="#{not empty usuarioBean.listarTodosChamados()}" 
+            <h:dataTable var="chamdo" value="#{gerenciadorBean.listarTodosChamadosFinalizados()}" width="100%" rendered="#{not empty gerenciadorBean.listarTodosChamadosFinalizados()}" 
                          styleClass="grid" headerClass="cabecalho" rowClasses="cor-sim, cor-nao"
                          columnClasses="tipo, escola, status, cidade, bairro, contato, telefone, dataabertura, descricao, editar">
                 <h:column >
