--- a/web/hp/usuarios/listarusuarios.xhtml
+++ b/web/hp/usuarios/listarusuarios.xhtml
@@ -14,10 +14,8 @@
 
         <h:form id="frm">
             <h:panelGroup class="usr">
-                <h:commandButton image="imagens/sair2.png" action="#{usuarioBean.sair()}" />
-                <h:outputText value="#{usuarioBean.usr.nome}" />
-                <h:outputText value=" " />
-                <h:outputText value="#{usuarioBean.usr.sobrenome}" />
+                <h:commandButton image="/imagens/sair2.png" action="#{gerenciadorBean.sair()}" />
+                <h:outputText value="#{gerenciadorBean.usuarioLogado.nome} #{gerenciadorBean.usuarioLogado.sobrenome}" />
             </h:panelGroup>
             <br/>
             <br/>
@@ -25,24 +23,24 @@
             <h:commandButton value="Voltar" action="listarchamados" />
             <h:commandButton value="Cadastrar Usuário" action="#{usuarioBean.irCadastrarUsuarios()}" />
             
-            <h:dataTable var="usuario" value="#{usuarioBean.listarTodosUsuarios()}" rendered="#{not empty usuarioBean.listarTodosUsuarios()}" width="100%" 
+            <h:dataTable var="usuario" value="#{gerenciadorBean.listarTodosUsuarios()}" rendered="#{not empty gerenciadorBean.listarTodosUsuarios()}" width="100%" 
                          styleClass="grid" headerClass="cabecalho" rowClasses="cor-sim, cor-nao"
                          columnClasses="nome, permissao, ativarconta, editar">
                 <h:column>
                     <f:facet name="header" >
-                        <h:commandLink value="Nome" />
+                        <h:outputText value="Nome" />
                     </f:facet>
                     <h:outputText value="#{usuario.nome} #{usuario.sobrenome}" />
                 </h:column>
                 <h:column>
                     <f:facet name="header" >
-                        <h:commandLink value="Permissão" />
+                        <h:outputText value="Permissão" />
                     </f:facet>
                     <h:outputText value="#{usuario.permissao.tipo}" />
                 </h:column>
                 <h:column>
                     <f:facet name="header" >
-                        <h:commandLink value="Status"/>
+                        <h:outputText value="Status"/>
                     </f:facet>
                     <h:outputText value="#{usuario.ativarconta.nome}" />
                 </h:column>
