configurando acessos de usuários

--- a/web/hp/usuarios/listarusuarios.xhtml
+++ b/web/hp/usuarios/listarusuarios.xhtml
@@ -47,7 +47,7 @@
                 <h:column>
                     <f:facet name="header" />
                     <h:commandLink  action="editarusuario" >
-                        <f:setPropertyActionListener target="#{usuarioBean.novoUsr}" value="#{usuario}" />
+                        <f:setPropertyActionListener target="#{gerenciadorBean.novoUsuario}" value="#{usuario}" />
                         <h:graphicImage value="/imagens/edit3.png" title="Editar" />
                     </h:commandLink>
                 </h:column>
