--- a/web/hp/chamados/verificarinep.xhtml
+++ b/web/hp/chamados/verificarinep.xhtml
@@ -13,10 +13,8 @@
         <h1><h:outputText value="Nova Escola" /></h1>
         <h:form id="sair">
             <h:panelGroup class="usr">
-                <h:commandButton image="imagens/sair2.png" action="#{usuarioBean.sair()}" />
-                <h:outputText value="#{usuarioBean.usr.nome}" />
-                <h:outputText value=" " />
-                <h:outputText value="#{usuarioBean.usr.sobrenome}" />
+                <h:commandButton image="imagens/sair2.png" action="#{gerenciadorBean.sair()}" />
+                <h:outputText value="#{gerenciadorBean.usuarioLogado.nome} #{gerenciadorBean.usuarioLogado.sobrenome}" />
             </h:panelGroup>
         </h:form>
         <h:form id="voltar">
@@ -37,7 +35,7 @@
         <h:form id="frm">
             <h:panelGrid columns="2" styleClass="form-grid" columnClasses="label, campo">
                 <h:outputLabel value="INEP" for="inep"  />
-                <h:inputText id="inep" label="INEP" value="#{usuarioBean.inep}" required="true" size="12" />
+                <h:inputText id="inep" label="INEP" value="#{gerenciadorBean.escola.inep}" required="true" size="12" />
                 
                 <br/>
 
